--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,12 @@
 
 
 ## Loading and preprocessing the data
-
+```{r}
+if(file.exists("activity.csv") == FALSE){
+    unzip(zipfile = 'activity.zip')    
+}
+activity <- read.csv(file="activity.csv")
+```
 
 
 ## What is mean total number of steps taken per day?
